unpackaged/main/default/objects/UserServicePresence__c/UserServicePresence__c.object-meta.xml
<CustomObject>
    <label>UserServicePresence__c</label>
    <nameField>
        <label>UserServicePresence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserServicePresence__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>