unpackaged/main/default/objects/UserServicePresence__c/fields/AtCapacityDuration__c.field-meta.xml
<CustomField>
    <fullName>AtCapacityDuration__c</fullName>
    <label>AtCapacityDuration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>