unpackaged/main/default/objects/UserServicePresence__c/fields/AverageCapacity__c.field-meta.xml
<CustomField>
    <fullName>AverageCapacity__c</fullName>
    <label>AverageCapacity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>