unpackaged/main/default/objects/UserServicePresence__c/fields/ConfiguredCapacity__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredCapacity__c</fullName>
    <label>ConfiguredCapacity</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>