unpackaged/main/default/objects/UserServicePresence__c/fields/IdleDuration__c.field-meta.xml
<CustomField>
    <fullName>IdleDuration__c</fullName>
    <label>IdleDuration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>