unpackaged/main/default/objects/UserServicePresence__c/fields/IsAway__c.field-meta.xml
<CustomField>
    <fullName>IsAway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAway</label>
    <type>Checkbox</type>
</CustomField>