unpackaged/main/default/objects/UserServicePresence__c/fields/IsCurrentState__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrentState</label>
    <type>Checkbox</type>
</CustomField>