unpackaged/main/default/objects/UserServicePresence__c/fields/ServicePresenceStatusId__c.field-meta.xml
<CustomField>
    <fullName>ServicePresenceStatusId__c</fullName>
    <label>Service Presence Status ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>