unpackaged/main/default/objects/UserServicePresence__c/fields/StatusDuration__c.field-meta.xml
<CustomField>
    <fullName>StatusDuration__c</fullName>
    <label>StatusDuration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>