unpackaged/main/default/objects/UserServicePresence__c/fields/StatusEndDate__c.field-meta.xml
<CustomField>
    <fullName>StatusEndDate__c</fullName>
    <label>StatusEndDate</label>
    <type>DateTime</type>
</CustomField>