unpackaged/main/default/objects/UserServicePresence__c/fields/StatusStartDate__c.field-meta.xml
<CustomField>
    <fullName>StatusStartDate__c</fullName>
    <label>StatusStartDate</label>
    <type>DateTime</type>
</CustomField>